# Branching_Webdemo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent_safe_services/: README.md  pyproject.toml
agent_safe_services/scripts/: cleanup.sh  run-cloudflare-quick-tunnel.sh  run-controller.sh  run-main.sh
agent_safe_services/src/agent_safe_services/: __init__.py  ckpt_runtime.py  controller_app.py  counter_app.py  db.py
deploy/: README.md  deploy.sh  harden-ports.sh  install-service.sh  serve-public.sh  status.sh  teardown.sh  versions.env
docs/: architecture-A-handoff.md  benchmark-arch-a-vs-b.md  benchmark-arch-a-vs-b.results.json  benchmark-build-mode.md  benchmark-build-mode.results.json  benchmark-pool.results.json  benchmark-three-structures.md  benchmark-three-structures.results.json  controller-mailbox-split-summary.md  ec2-deploy.md  ec2-deployment-plan.md  email-server-handoff.md  email-server-migration-plan.md  inventory-dolt-backend.md  plan.md  storefront-dolt-backend.md  ubuntu-checkpoint-lite.md
scripts/: bench-arch-a-vs-b.py  bench-dolt-pool.py  bench-three-structures.py  cleanup-statefork-demo.sh  draw-architecture-diagram.py  draw-benchmark-charts.py  inventory-dolt-ab-demo.py  inventory-dolt-server-demo.py  run-cloudflare-quick-tunnel.sh  run-dev.sh  run-public-main.sh  run-shopgym-statefork.sh  run-statefork-docker.sh  setup-shopgym-images.sh  smoke-test.py  sync-mock-api-overlay.sh  test-branching.py
src/agent_safe_demo/: branching.py  mailbox_app.py  main.py
src/agent_safe_demo/app_plane/: __init__.py
src/agent_safe_demo/app_plane/email_service/: Dockerfile  __init__.py  app.py  statefork.yaml
src/agent_safe_demo/app_plane/inventory_service/: Dockerfile  __init__.py  app.py  statefork.yaml  store.py
src/agent_safe_demo/app_plane/kv_service/: app.py  statefork-run.sh  statefork.yaml
src/agent_safe_demo/app_plane/mock_api_overlay/: README.md  data.ts  overlay.ts  resolvers.ts  server.ts
src/agent_safe_demo/app_plane/shop_clothing/: Dockerfile  statefork.yaml
src/agent_safe_demo/app_plane/shop_cookware/: Dockerfile  statefork.yaml
src/agent_safe_demo/app_plane/shop_hardware/: Dockerfile  statefork.yaml
src/agent_safe_demo/control_plane/: __init__.py  app_registry.py  auth.py  branching.py  catalog.py  commit_store.py  data_tier.py  dolt_server.py  idle.py  main.py  manifest.py  overlay_sync.py  proxy.py  runtime_manager.py  statefork.py  workspace.py
src/agent_safe_demo/control_plane/static/: app.js  index.html  styles.css
src/agent_safe_demo/static/: app.js  index.html  styles.css
tests/: test_api.py  test_storefront_dolt.py
