[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-safe-toy-mailbox"
version = "0.1.0"
description = "FastAPI mailbox app for agent-safe branch workflow experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.14",
  "psutil>=7.0.0",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_safe_demo = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
