[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-safe-demo-mailbox"
version = "0.1.0"
description = "FastAPI mailbox app for agent-safe branch workflow experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.14",
  "PyYAML>=6.0",
  "psutil>=7.0.0",
  "paramiko>=3.4",
  "PyMySQL>=1.1",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agent_safe_demo.control_plane" = ["static/*.html", "static/*.css", "static/*.js"]
"agent_safe_demo.app_plane.email_service" = ["statefork.yaml"]
"agent_safe_demo.app_plane.inventory_service" = ["statefork.yaml"]
"agent_safe_demo.app_plane.kv_service" = ["statefork.yaml", "*.sh"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
