[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopgym-statefork-webdemo"
version = "0.1.0"
description = "FastAPI control plane that branches Shopify Hydrogen shops via StateFork checkpoint/restore."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.14",
  "PyYAML>=6.0",
  # psutil/paramiko are not imported by this repo directly; the StateFork
  # controller (imported in-process from DEMO_STATEFORK_ROOT) needs them.
  "psutil>=7.0.0",
  "paramiko>=3.4",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agent_safe_demo.control_plane" = ["static/*.html", "static/*.css", "static/*.js", "static/*.png"]
"agent_safe_demo.app_plane.shop_clothing" = ["statefork.yaml", "Dockerfile"]
"agent_safe_demo.app_plane.shop_cookware" = ["statefork.yaml", "Dockerfile"]
"agent_safe_demo.app_plane.shop_hardware" = ["statefork.yaml", "Dockerfile"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
