[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-safe-services"
version = "0.1.0"
description = "Direct checkpoint-lite runtime for agent-safe branchable web services."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi==0.115.14", "httpx>=0.27", "uvicorn[standard]==0.35.0"]

[tool.setuptools.packages.find]
where = ["src"]
